--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Install dependencies
         run: npm i
       - name: Build website
-        run: npm run build
+        run: npx vite build --base=redownload-files
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
